--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+## https://pub.towardsai.net/moving-from-ollama-to-vllm-finding-stability-for-high-throughput-llm-serving-74d3dc9702c8
+## Check .env for HUGGING_FACE_HUB_TOKEN
+
 services:
   vllm:
     image: vllm/vllm-openai:v0.9.2
